# sci_comp

array2d/: CMakeLists.txt  array2d.hh  main.cpp  test_array2d.cc
optimization/: optimize.cc  unoptimize.cc
